<resources>
    <string name="app_name">calculadora</string>
    <string name="tv_num1"></string>
    <string name="tv_operacion"></string>
    <string name="tv_num2"></string>
    <string name="tv_igual">=</string>
    <string name="tv_resul"></string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button_suma">+</string>
    <string name="button_resta">-</string>
    <string name="button_multi">*</string>
    <string name="button_divi">/</string>
    <string name="button_punto">.</string>
    <string name="button_igual">=</string>
</resources>
